--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -1,3 +1,68 @@
+body {
+    color: rgb(13, 13, 13);
+    font-family: Verdana, sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+}
+
 #icon {
-    height: 50px;
+    height: 70px;
+    position: relative;
+    left: 20px;
+}
+
+.top_nav {
+    overflow: hidden;
+    background-color: #e9e9e9;
+}
+  
+.top_nav a {
+float: left;
+display: block;
+color: black;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+}
+
+.top_nav a:hover {
+background-color: #ddd;
+color: black;
+}
+
+.top_nav a.active {
+background-color: #2196F3;
+color: white;
+}
+
+.top_nav #searchbar {
+    float: right;
+    position: relative;
+    right: 20px;
+    padding: 14px 16px;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav #searchbar button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav #searchbar button:hover {
+  background: #ccc;
 }
