--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -5,6 +5,7 @@ body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 #icon {
@@ -38,7 +39,7 @@ background-color: #2196F3;
 color: white;
 }
 
-.top_nav #searchbar {
+.top_nav .searchbar {
     float: right;
     position: relative;
     right: 20px;
@@ -52,7 +53,7 @@ color: white;
   border: none;
 }
 
-.topnav #searchbar button {
+.topnav .searchbar button {
   float: right;
   padding: 6px 10px;
   margin-top: 8px;
@@ -63,6 +64,75 @@ color: white;
   cursor: pointer;
 }
 
-.topnav #searchbar button:hover {
+.topnav .searchbar button:hover {
   background: #ccc;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    position: relative;
+    left: 20px;
+}
+
+
+
+.slideshow-container {
+    max-height: 500px;
+    position: relative;
+    margin: auto;
+}
+
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+  
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+}
+  
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.slideshow-container .product img {
+    display: block;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
