--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -1,10 +1,13 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     color: rgb(13, 13, 13);
     font-family: Verdana, sans-serif;
     font-size: 15px;
     line-height: 1.5;
-    margin: 0;
-    padding: 0;
     overflow-x: hidden;
 }
 
@@ -135,4 +138,11 @@ h6 {
     height: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+/* to remove the scrollbar in dynamic view */
+.popular_product {
+    width: 100%;
+    overflow: clip;
 }
