--- a/style/mystyle2.css
+++ b/style/mystyle2.css
@@ -33,13 +33,23 @@ h3 {
 .loginForm,
 .registerForm {
     background-color: white;
-    width: 40%;
+    width: clamp(300px, 40%, 40%);
     position: absolute;
     top: 50%;
     right: 3%;
     transform: translateY(-50%);
     border-radius: 12px;
     border: 1px solid #888;
+}
+
+@media (max-width: 765px) {
+    .loginForm,
+    .registerForm {
+        background-color: rgba(255, 255, 255, 0.5);
+        top: 50%;
+        right: 50%;
+        translate: 50% 0;
+    }
 }
 
 .formContent {
