--- a/style/displayItem.css
+++ b/style/displayItem.css
@@ -1,14 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #f4f4f4;
-}
-
 .itemListContainer {
     display: flex;
     flex-wrap: wrap;
@@ -19,16 +8,18 @@ body {
 }
 
 .item-card {
+    display: grid;
+    place-items: center;
+    justify-content: center ;
     background: white;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     padding: 16px;
-    text-align: center;
     width: 200px;
     box-sizing: border-box;
     text-decoration: none; /* Remove underline from links */
     color: inherit; /* Inherit text color */
-    display: block; /* Make the entire card clickable */
+    /* display: block; Make the entire card clickable */
 }
 
 .item-card img {
@@ -37,9 +28,12 @@ body {
     border-radius: 4px;
 }
 
-.item-card h2 {
+.item-card > h2 {
+    position: initial;
     font-size: 1.25rem;
-    margin: 12px 0 8px;
+    margin: 0;
+    text-align: center;
+
 }
 
 .item-card p {
@@ -58,6 +52,6 @@ body {
     font-size: 1rem;
 }
 
-.item-card button:hover {
-    background-color: #0056b3;
+.item-card:hover {
+    opacity: 0.5;
 }
