--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -17,14 +17,32 @@ body {
     left: 20px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
     position: relative;
+    font-size: 3.5rem;
     left: 20px;
+    width: 80%;
+}
+
+h2 {
+    position: relative;
+    font-size: 2.5rem;
+    left: 20px;
+    width: 80%;
+}
+
+h3 {
+    position: relative;
+    font-size: 2rem;
+    left: 20px;
+    width: 80%;
+}
+
+h4 {
+    position: relative;
+    font-size: 1.5rem;
+    left: 20px;
+    width: 80%;
 }
 
 
