--- a/style/itemDetail.css
+++ b/style/itemDetail.css
@@ -19,8 +19,9 @@
 }
 
 .image-container img {
-    max-width: 100%; /* Ensures the image doesn't overflow the container width */
-    height: auto; /* Maintain aspect ratio */
+    width: 100%; /* Ensures the image doesn't overflow the container width */
+    max-height: 600px;
+    object-fit: contain;
 }
 
 .detail-container {
