--- a/style/navigationStyle.css
+++ b/style/navigationStyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     color: rgb(13, 13, 13);
     font-family: Verdana, sans-serif;
@@ -25,7 +27,9 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-family: "Kanit", sans-serif;
+    font-weight: 800;
+    font-size: 20px;
 }
 
 .top_nav a:hover,
@@ -67,11 +71,12 @@ body {
 }
 
 .item-dropdown .dropbtn {
-    font-size: 17px;
+    font-family: "Kanit", sans-serif;
+    font-weight: 800;
+    font-size: clamp(1rem, 5vw, 1.25rem) !important;
     border: none;
     padding: 14px 16px;
     background-color: inherit;
-    font-family: inherit;
     margin: 0;
 }
 
