--- a/style/quantitySelector.css
+++ b/style/quantitySelector.css
@@ -29,3 +29,9 @@
     text-align: center;
     font-size: 16px;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
