--- a/style/displayItem.css
+++ b/style/displayItem.css
@@ -19,6 +19,14 @@
     box-sizing: border-box;
     text-decoration: none; /* Remove underline from links */
     color: inherit; /* Inherit text color */
+    /* Animation */
+    transition: transform 0.3s ease-in-out;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+}
+
+.item-card:hover {
+    transform: translateZ(30px) scale(1.1);
 }
 
 .item-card img {
