--- a/style/cart.css
+++ b/style/cart.css
@@ -49,3 +49,24 @@
 .checkout-button:hover {
     background-color: #45a049; /* Darker green on hover */
 }
+
+.cart-empty-container {
+    text-align: center;
+    margin: 50px auto;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+}
+
+.cart-empty-container p {
+    font-size: 18px;
+    color: #555;
+}
+
+.cart-empty-container img {
+    width: 250px;
+    height: auto;
+    margin: 20px 0;
+}
