--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -17,6 +17,10 @@ body {
 
 #header {
     background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .inner {
@@ -167,3 +171,53 @@ h4 {
     width: 100%;
     overflow: clip;
 }
+
+.top-section-container {
+    width: 100%;
+    height: 100vh; /* Ensure it takes the full viewport height */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    z-index: 1;
+    margin-top: 0;
+    display: flex;
+    justify-content: center; /* Centers the inner content horizontally */
+    align-items: center; /* Centers the inner content vertically */
+}
+
+.top-section-container video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the video covers the entire container */
+    transform: translate(-50%, -50%); /* Center the video */
+    z-index: -1; /* Place video behind the content */
+}
+
+.dot-background {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px; /* Adjust as needed */
+    background: url('../images/kv_dot.png') repeat-x center bottom;
+    z-index: -1; /* In front of the video but behind the content */
+    height: 157px;
+    bottom: 0;
+}
+
+.welcome-container h1 {
+    color: #0b7dda; /* Fully opaque text color */
+    text-align: center;
+    font-size: 2.5rem;
+    background-color: rgba(255, 255, 255, 0.5); /* Whitesmoke with 50% opacity */
+    width: 100vw;
+    padding: 20px; /* Add padding for better layout */
+    border-radius: 10px; /* Optional: Round corners */
+    backdrop-filter: blur(10px); /* Apply a blur effect behind the h1 */
+    display: inline-block; /* Ensure the background only wraps around the text */
+}
+
