--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -67,7 +67,7 @@ body {
     }
 
     .title {
-        margin: 2vw auto 10vw;
+        margin: 2vw auto 5vw;
     }
 }
 
@@ -221,3 +221,16 @@ h4 {
     display: inline-block; /* Ensure the background only wraps around the text */
 }
 
+.fade-in {
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
