--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -36,9 +36,18 @@ body {
     font-style: italic;
 }
 
+.inner span {
+    filter: drop-shadow(3px 3px 0 #f0e30e);
+}
+
 @media screen and (max-width: 768px) {
     .inner {
         font-size: 7.7vw;
+        padding: 2% 0;
+    }
+
+    .search-result .inner{
+        font-size: 5vw;
         padding: 2% 0;
     }
 }
@@ -59,6 +68,12 @@ body {
     margin-top: 0;
 }
 
+.bg-frame .search-result{
+    position: relative;
+    font-size: 2rem;
+    margin-top: 0;
+}
+
 @media screen and (min-width: 769px) {
     .display-item-page .bg-frame {
         background-image: url(../images/bg_frame_lt.png), url(../images/bg_frame_rt.png), url(../images/bg_frame_lb.png), url(../images/bg_frame_rb.png);
@@ -76,14 +91,6 @@ body {
     position: relative;
     left: 20px;
 }
-
-/* h1 {
-    position: relative;
-    font-size: 3.5rem;
-    margin-top: 0;
-    /* left: 20px;
-    width: 80%; */
-/* } */ 
 
 h2 {
     position: relative;
@@ -226,6 +233,16 @@ h4 {
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+
+.bg-frame .search-result .glitch {
+    animation: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 400ms 1 normal forwards running glitch-skew;
+}
+
+.bg-frame .title .glitch {
+    animation: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 400ms 1 normal forwards running glitch-skew;
+}
+
+
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
@@ -233,4 +250,28 @@ h4 {
     100% {
         opacity: 1;
     }
+}
+
+@keyframes glitch-skew {
+    0% {
+        transform: skew(0deg, 0deg);
+        filter: blur(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+        transform: skew(-20deg, 0deg);
+        filter: blur(4px);
+    }
+    52% {
+        transform: skew(20deg, 0deg);
+    }
+    54% {
+        transform: skew(0deg, 0deg);
+        filter: blur(0);
+    }
+    100% {
+        opacity: 1;
+        transform: skew(0deg, 0deg);
+    }   
 }
