--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -222,56 +222,7 @@ h4 {
     font-size: 2.5rem;
     background-color: rgba(255, 255, 255, 0.5); /* Whitesmoke with 50% opacity */
     width: 100vw;
-    padding: 20px; /* Add padding for better layout */
-    border-radius: 10px; /* Optional: Round corners */
+    padding: 20px 0px; /* Add padding for better layout */
     backdrop-filter: blur(10px); /* Apply a blur effect behind the h1 */
     display: inline-block; /* Ensure the background only wraps around the text */
-}
-
-.fade-in {
-    animation: fadeInAnimation ease 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
-
-.bg-frame .search-result .glitch {
-    animation: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 400ms 1 normal forwards running glitch-skew;
-}
-
-.bg-frame .title .glitch {
-    animation: 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 400ms 1 normal forwards running glitch-skew;
-}
-
-
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes glitch-skew {
-    0% {
-        transform: skew(0deg, 0deg);
-        filter: blur(0);
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-        transform: skew(-20deg, 0deg);
-        filter: blur(4px);
-    }
-    52% {
-        transform: skew(20deg, 0deg);
-    }
-    54% {
-        transform: skew(0deg, 0deg);
-        filter: blur(0);
-    }
-    100% {
-        opacity: 1;
-        transform: skew(0deg, 0deg);
-    }   
 }
