--- a/style/cart.css
+++ b/style/cart.css
@@ -12,7 +12,8 @@
     grid-template-columns: 20% 50% 30%;
     place-items: center;
     border-radius: 12px;
-    background-color: lightblue;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 90%;
     margin: 0 auto;
 }
@@ -69,4 +70,16 @@
     width: 250px;
     height: auto;
     margin: 20px 0;
+}
+
+@media (max-width: 700px) {
+    .product-row img {
+        width: 13vh;
+        height: auto;
+    }
+    .product-row {
+        display: flex;
+        flex-direction: column;
+        padding: 15px 0;
+    }
 }
