--- a/style/quantitySelector.css
+++ b/style/quantitySelector.css
@@ -53,3 +53,7 @@ input[type=number]::-webkit-outer-spin-button {
     float: right;
     border: 0;
 }
+
+.add-to-cart-button:hover {
+    background-color: #45a049;
+}
