--- a/style/edit_profile.css
+++ b/style/edit_profile.css
@@ -1,18 +1,19 @@
 .present-profile {
     float:left;
-    margin: 10px 0px 0px 30px;
+    margin: 1% 0px 0px 2%;
     padding: 20px;
-    width: 25%;
+    width: auto;
+    height: auto;
     background-color: antiquewhite;
     text-align: center;
 }
 
 .edit-form {
     float: right;
-    margin: 10px 65px 0px 10px;
-    padding: 20px;
-    width: 800px;
-    height: 500px;
+    margin: 1% 5% 0px .5%;
+    padding: 3vh 0 3vh 0;
+    width: 60%;
+    height: auto;
     background-color: antiquewhite;
     text-align: center;
     align-content: center;
@@ -30,4 +31,8 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
+}
+
+.error {
+    color: red;
 }
