final css adjustment

--- a/style/cart.css
+++ b/style/cart.css
@@ -16,6 +16,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 90%;
     margin: 0 auto;
+    padding: 10px 0;
 }
 
 .product-row img {
