--- a/style/navigationStyle.css
+++ b/style/navigationStyle.css
@@ -2,7 +2,6 @@
 
 body {
     color: rgb(13, 13, 13);
-    font-family: Verdana, sans-serif;
     font-size: 15px;
     line-height: 1.5;
     overflow-x: hidden;
@@ -33,12 +32,6 @@ body {
     font-family: "Kanit", sans-serif;
     font-weight: 800;
     font-size: 20px;
-}
-
-.top_nav a:hover,
-.item-dropdown:hover .dropbtn {
-    background-color: #ddd;
-    color: black;
 }
 
 .top_nav a.active {
@@ -100,7 +93,10 @@ body {
     text-align: left;
 }
 
-.item-dropdown-content a:hover {
+.item-dropdown-content a:hover,
+.expand-menu a:hover,
+.top_nav .nav-left a:hover,
+.item-dropdown .dropbtn:hover {
     color: white;
     background-color: #2196F3;
 }
@@ -148,6 +144,15 @@ body {
         padding: 10px;
     }
 
+    .expand-menu .item-dropdown .dropbtn {
+        color: inherit;
+    }
+
+    .expand-menu .item-dropdown:hover {
+        color: white;
+        background-color: #2196F3;
+    }
+
     .expand-menu.responsive {
         display: block; /* Show when hamburger icon is clicked */
         padding: 0;
@@ -163,10 +168,6 @@ body {
         font-family: "Kanit", sans-serif;
         font-weight: 800;
         font-size: 18px;
-    }
-
-    .expand-menu a:hover {
-        background-color: #ddd;
     }
     
     .expand-menu-searchbar {
