--- a/style/mystyle1.css
+++ b/style/mystyle1.css
@@ -113,86 +113,11 @@ body {
 h2 {
     position: relative;
     font-size: 2.5rem;
-    /* left: 20px;
-    width: 80%; */
 }
 
 h3 {
     font-size: 1.5rem;
     width: 80%;
-}
-/*
-h4 {
-    position: relative;
-    font-size: 1.5rem;
-    left: 20px;
-    width: 80%;
-} */
-
-
-
-.slideshow-container {
-    max-height: 500px;
-    position: relative;
-    margin: auto;
-}
-
-
-/* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-  
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-    color: white;
-}
-  
-/* The dots/bullets/indicators */
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-    background-color: #717171;
-}
-
-.slideshow-container .product img {
-    display: block;
-    height: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-/* to remove the scrollbar in dynamic view */
-.popular_product {
-    width: 100%;
-    overflow: clip;
 }
 
 .top-section-container {
@@ -233,12 +158,12 @@ h4 {
 }
 
 .welcome-container h1 {
-    color: #0b7dda; /* Fully opaque text color */
+    color: #0b7dda; 
     text-align: center;
     font-size: 2.5rem;
-    background-color: rgba(255, 255, 255, 0.5); /* Whitesmoke with 50% opacity */
+    background-color: rgba(255, 255, 255, 0.5); 
     width: 100vw;
-    padding: 20px 0px; /* Add padding for better layout */
+    padding: 20px 0px; 
     backdrop-filter: blur(10px); /* Apply a blur effect behind the h1 */
-    display: inline-block; /* Ensure the background only wraps around the text */
+    display: inline-block; 
 }
